--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,7 +1,9 @@
 FROM node:18-alpine
 WORKDIR /app
 COPY . .
-RUN npm ci --quiet
 
-EXPOSE 3001
-CMD ["node", "index.js"]
+RUN yarn
+
+RUN yarn build
+
+EXPOSE 3000
