--- a/backend/package.json
+++ b/backend/package.json
@@ -1,19 +1,39 @@
 {
-  "name": "population-backend",
-  "version": "1.0.0",
+  "name": "home-assingment-service",
+  "version": "0.0.1",
   "description": "",
-  "engines": {
-    "node": ">=18.12.0 <19",
-    "npm": ">=8.19.0 <9"
-  },
-  "main": "index.js",
+  "main": "dist/app.js",
+  "private": true,
   "scripts": {
-    "start": "node index.js"
+    "start": "node dist/app.js",
+    "start-dev": "ts-node-dev --respawn src/app.ts",
+    "build": "tsc --build",
+    "test": "jest --forceExit --detectOpenHandles",
+    "lint": "eslint . --ext .ts"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "4.18.2",
+    "pg": "8.8.0",
+    "dotenv": "16.0.3"
+  },
+  "devDependencies": {
+    "@types/express": "4.17.14",
+    "@types/http-errors": "2.0.1",
+    "@types/jest": "29.2.3",
+    "@types/node": "16.18.0",
+    "@types/supertest": "2.0.12",
+    "eslint": "8.28.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-prettier": "4.2.1",
+    "jest": "29.3.1",
+    "prettier": "2.8.0",
+    "ts-jest": "29.0.3",
+    "ts-node-dev": "2.0.0",
+    "typescript": "4.9.3",
+    "supertest": "6.3.1",
+    "@typescript-eslint/eslint-plugin": "5.44.0",
+    "@typescript-eslint/parser": "5.44.0",
+    "@types/pg": "8.6.5"
   }
 }
